--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <p>
                     Notice: This project has no affailation with The Silph Road. We're fans of TSR, and are saddened by their sunset. In order to give community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE" target="_blank">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
                   </p>
-                  <p>This resource is a volunteer project from passionate fans, if you'd like to contribute to this effort share your asset to <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN" target="_blank">Discord server</a>, or submit your assets using <a href="https://assets.pogo.community/ target=")_blank">this submission form</a>. Submissions from the community keeps this project going!</p>
+                  <p>This resource is a volunteer project from passionate fans, if you'd like to contribute to this effort share your asset to <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN" target="_blank">Discord server</a>, or submit your assets using <a href="https://docs.google.com/forms/d/e/1FAIpQLSePwUaE9yfMIvE1QcSDQiipbn9ye9y99GpGhnfVyjogyU_-0Q/viewform" target="_blank">this submission form</a>. Submissions from the community keeps this project going!</p>
                   <div class="filters">
                      <div class="filter-section">
                        <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
@@ -95,9 +95,145 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
-                     <!-- Start Squirtle Day Classic -->
-                     <div class="asset-section" data-type="external">
+                     <!-- Start Froakie CDay -->
+                     <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="squirtlejune2023" href="#squirtlejune2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Squirtle Community Day Classic (June 9th 2023)</span></h5>
+                        <p>
+                           We've been hearing whispers and rumors for a while, and it turned out to be true! Here's some assets to promote your meetups!
+                        </p>
+                        <div class="assetGroup">
+
+                           <div class="asset">
+                              <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
+                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-07-30-community-day/HexBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hex Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
+                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-07-30-community-day/HexBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Community Day League Badges</label>
+                              </a>
+                              <p>
+                                 The linked folder has multiple versions. The Gold ones are aimed at your winning players in Weight/Team/Catches Divisions, the standard blue ones are for players who have entered CDL.  
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1U_57M9qzjr0-evajyMSrJFG04bMrvgYD?usp=sharing" target="_blank">
+                              <img src="./img/gdrive-folder-icon.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Drive Folder</label>
+                              </a>
+                              <p>
+                                 Contains additional assets in differnt formats, check it for more details
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Froakie CDay -->
+                     <!-- Start Poliwag CDay -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="poliwagjuly2023" href="#poliwagjuly2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Poliwag Community Day (July 30th 2023)</span></h5>
+                        <p>
+                           The rumors have been spot on lately! Our asset artis xLuximityx was able to get the jump on these assets before this was even confirmed! We don't publish to our social media or this site until they're confirmed, but if you want an early jump on these assets too follow <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> in our discord server where they're often discussed and shared before confirmation. If you use these assets for anything please be sure to share it with us! We love seeing your buttons and designs everywhere!
+                        </p>
+                        <div class="assetGroup">
+
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1eWmIJS_ou2nQYbiPCETOmp3U6E_iuw1k?usp=drive_link" target="_blank">
+                              <img  alt="Poliwag Community Day Hexagon Badge" src="./assets/2023/2023-07-09-community-day-classic/OnlyBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Hex Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions, as well as pre-made templates for button makers. Be sure to print them at actual size with borderless printing if your printer supports it.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/504670-squirtle-community-day-classic-coin" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/Slicer Preview.png">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Label">
+                              </div>
+                              <label>3D Coin</label>
+                              </a>
+                              <p>
+                                 by <a href="https://social.pogo.community/@forte">Forte</a>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1EyEBWqXbUG9FtDGmCRTPbpA8o8x4N8i7?usp=sharing" target="_blank">
+                              <img src="./assets/2023/2023-07-09-community-day-classic/Stack.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Gym Badges</label>
+                              </a>
+                              <p>
+                                 Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1--v7mU3Uw_1lCsNoMSdMxZQybHNWRJR0/view?usp=drive_link" target="_blank">
+                              <img  alt="Poliwag Community Day Wenmdis Badge" src="./assets/2023/2023-07-30-community-day/wenmdis-badge-poliwirl.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Wenmdis Badge</label>
+                              </a>
+                              <p>
+                                 Round Badge, great for making round buttons.
+                                 <div class="credits">
+                                    Badge Design: Wenmdis
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1ZMrmHvHrRvQnHM8x7lj7JroZNP5Zqr0C?usp=sharing" target="_blank">
+                              <img src="./img/gdrive-folder-icon.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Drive Folder</label>
+                              </a>
+                              <p>
+                                 Contains additional assets in differnt formats, check it for more details
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Poliwag CDay -->
+                     <!-- Start Squirtle Day Classic -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="squirtlejuly2023" href="#squirtlejuly2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Squirtle Community Day Classic (July 9th 2023)</span></h5>
                         <p>
                            We've been hearing whispers and rumors for a while, and it turned out to be true! Here's some assets to promote your meetups!
                         </p>
