--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                      Welcome to the PoGo Community Checkpoint Assets page! This is where we maintain a comprehensive archive of the assets we share. All our assets are published under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA</a> license, which means they are for non-commercial use only, unless stated otherwise on an individual asset level. In addition to our own published assets, we occasionally provide links to other valuable assets published elsewhere on the web, benefiting community leaders. We kindly request that you honor the licensing terms set by the artists who have shared their work when accessing such resources.
                   </p>
                   <p>
-                    Notice: This project has no affailation with The Silph Road. We're fans of TSR, and are saddened by their sunset. In order to give community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE" target="_blank">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
+                    Notice: This project has no affailation with The Silph Road. We're fans of TSR, and were saddened by their sunset. In order to give community organizers a new home to find assets to promote their event as quickly as possible we <a href="https://github.com/SilphRoad/silph-league/blob/master/LICENSE" target="_blank">forked their assets repo</a> so we could quickly get this website up for community leaders who had come to rely on monthly assets and in the coming months we will be changing more and more to clearly diferentiate us!
                   </p>
                   <p>This resource is a volunteer project from passionate fans, if you'd like to contribute to this effort share your asset to <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN" target="_blank">Discord server</a>, or submit your assets using <a href="https://docs.google.com/forms/d/e/1FAIpQLSePwUaE9yfMIvE1QcSDQiipbn9ye9y99GpGhnfVyjogyU_-0Q/viewform" target="_blank">this submission form</a>. Submissions from the community keeps this project going!</p>
                   <div class="filters">
@@ -72,6 +72,10 @@
                            <input type="radio" name="type" value="community-day">
                            <span>Community Day</span>
                         </label>
+                        <label>
+                          <input type="radio" name="type" value="special-events">
+                          <span>Special Events</span>
+                       </label>
                         <label>
                           <input type="radio" name="type" value="general">
                           <span>General</span>
@@ -95,14 +99,68 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
-                     <!-- Start Froakie CDay -->
-                     <div class="asset-section" data-type="community-day">
-                        <h5><a class="page-anchor" id="squirtlejune2023" href="#squirtlejune2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Squirtle Community Day Classic (June 9th 2023)</span></h5>
+                     <!-- Start Go Fest 2023 -->
+                     <div class="asset-section" data-type="special-events">
+                        <h5><a class="page-anchor" id="gofest2023" href="#gofest2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Go Fest 2023</span></h5>
                         <p>
-                           We've been hearing whispers and rumors for a while, and it turned out to be true! Here's some assets to promote your meetups!
+                           Pokémon GO Fest 2023 is a month-long celebration of Pokémon GO that features both in-person and digital events. Trainers can join the fun in London, Osaka, or New York City, or play from anywhere in the world during the global event. There will be over 70 Pokémon to encounter, including Shiny Pokémon and the Mythical Pokémon Diancie. Trainers can also experience the debut of Mega Rayquaza and Mega Diancie, as well as a new attack called Dragon Ascent. If you are planning to host or attend a local event for Pokémon GO Fest 2023, we have some awesome art assets for you to use. You can download them from our website and use them to create posters, flyers, banners, stickers, or anything else you can think of. We would love to see how you use our assets, so please tag us on social media with #PokemonGOFest2023 and show us your creativity!
                         </p>
                         <div class="assetGroup">
-
+                           <div class="asset">
+                              <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
+                              <img alt="Hexagon Style Go Fest 2023 Badge" src="./assets/2023/2023-gofest/hexwithBackground.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hex Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team. Inside this folder you will also find alternate versions.
+                                 <div class="credits">
+                                    Badge Design: xLuximityx <br />
+                                    Base Template: Former Silph Road<br />
+                                    Pokemon Sprite: Pokémon Company
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/546304-pokemon-go-fest-2023-coin" target="_blank">
+                              <img alt="Go Fest 2023 Coin Photo" src="./assets/2023/2023-gofest/coin-thumbnail.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Go Fest 2023 Coin</label>
+                              </a>
+                              <p>
+                                 3D Print Coins for your community! 
+                                 <div class="credits">
+                                    Coin Design: <a href="https://www.printables.com/@808Asher" target="_blank">808Asher</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/open?id=1-ANWEMY-eMEf2jJA7Up8cZ_HRjbbZME6&usp=drive_fs" target="_blank">
+                              <img src="./img/gdrive-folder-icon.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
+                              </div>
+                              <label>Drive Folder</label>
+                              </a>
+                              <p>
+                                 Contains additional assets in differnt formats, check it for more details
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Go Fest 2023 -->
+                     <!-- Start Froakie CDay -->
+                     <div class="asset-section" data-type="community-day">
+                        <h5><a class="page-anchor" id="froakieaugust2023" href="#froakieaugust2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Squirtle Community Day Classic (June 9th 2023)</span></h5>
+                        <p>
+                           Pokémon GO is celebrating the Bubble Frog Pokémon, Froakie, with a special Community Day event on August 13, 2023 you'll be able to catch more Froakie in the wild, and maybe even find a shiny one! If you are looking for some cool art assets to use for your local meetup, we have got you covered. You can download and use them to decorate your venue, create invitations, make badges, or anything else you can imagine. We would love to see your creations, so please share them with us on social media being sure to tag us!
+                        </p>
+                        <div class="assetGroup">
                            <div class="asset">
                               <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
                               <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-07-30-community-day/HexBadge.png">
@@ -131,7 +189,7 @@
                               <p>
                                  The linked folder has multiple versions. The Gold ones are aimed at your winning players in Weight/Team/Catches Divisions, the standard blue ones are for players who have entered CDL.  
                                  <div class="credits">
-                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
                                  </div>
                               </p>
                            </div>
@@ -155,7 +213,7 @@
                      <div class="asset-section" data-type="community-day">
                         <h5><a class="page-anchor" id="poliwagjuly2023" href="#poliwagjuly2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Poliwag Community Day (July 30th 2023)</span></h5>
                         <p>
-                           The rumors have been spot on lately! Our asset artis xLuximityx was able to get the jump on these assets before this was even confirmed! We don't publish to our social media or this site until they're confirmed, but if you want an early jump on these assets too follow <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> in our discord server where they're often discussed and shared before confirmation. If you use these assets for anything please be sure to share it with us! We love seeing your buttons and designs everywhere!
+                           Poliwag Community Day is on July 30, 2023. You can catch more Poliwag in the wild, and maybe even find a shiny one! If you evolve a Poliwhirl during the event, you can get a Poliwrath with Counter or a Politoed with Ice Beam. You can also enjoy other bonuses and a special research story. We have some amazing art assets for you to download. You can use them to spice up your local meetup and show your love for Poliwag. We are excited to see your creations, so please tag us on social media when you share them!
                         </p>
                         <div class="assetGroup">
 
