Added CDL Badges

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
-                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-07-30-community-day/HexBadge.png">
+                              <a href="https://drive.google.com/open?id=1WVnO-Z-107K-pTWDbyElU1jmrK4u5tpt&usp=drive_fs" target="_blank">
+                              <img alt="Shild Style Community Day League Badge" src="./assets/2023/2023-08-13-community-day/CDL-Stack.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
@@ -273,6 +273,22 @@
                                  </div>
                               </p>
                            </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/open?id=1GTzMkBE-RcGOkhbHc6HMAxG74lwjFxUK&usp=drive_fs" target="_blank">
+                              <img alt="Shild Style Community Day League Badge" src="./assets/2023/2023-07-30-community-day/CDL-Stack.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Community Day League Badges</label>
+                              </a>
+                              <p>
+                                 The linked folder has multiple versions. The Gold ones are aimed at your winning players in Weight/Team/Catches Divisions, the standard blue ones are for players who have entered CDL.  
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           
                            <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1ZMrmHvHrRvQnHM8x7lj7JroZNP5Zqr0C?usp=sharing" target="_blank">
                               <img src="./img/gdrive-folder-icon.png">
@@ -373,6 +389,22 @@
                                  Designed to be a Discord emoji for the purpose of being used as a PokeNav badge icon by @_kaiisen in the PGCC Discord
                               </p>
                            </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/open?id=1WVnO-Z-107K-pTWDbyElU1jmrK4u5tpt&usp=drive_fs" target="_blank">
+                              <img alt="Shild Style Community Day League Badge" src="./assets/2023/2023-07-09-community-day/CDL-Stack.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Community Day League Badges</label>
+                              </a>
+                              <p>
+                                 The linked folder has multiple versions. The Gold ones are aimed at your winning players in Weight/Team/Catches Divisions, the standard blue ones are for players who have entered CDL.  
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           
                            <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1ZMrmHvHrRvQnHM8x7lj7JroZNP5Zqr0C?usp=sharing" target="_blank">
                               <img src="./img/gdrive-folder-icon.png">
