check-in update

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </p>
                         <div class="assetGroup">
                            <div class="asset">
-                              <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
+                              <a href="https://drive.google.com/open?id=1HUSXa34cofEu8gG3ElwmfnWUZikpehOM&usp=drive_fs" target="_blank">
                               <img alt="Hexagon Style Go Fest 2023 Badge" src="./assets/2023/2023-gofest/hexwithBackground.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
@@ -139,7 +139,7 @@
                               </p>
                            </div>
                            <div class="asset">
-                              <a href="https://drive.google.com/open?id=1-ANWEMY-eMEf2jJA7Up8cZ_HRjbbZME6&usp=drive_fs" target="_blank">
+                              <a href="https://drive.google.com/open?id=1-C8iK4tFdcZbvv2Xa1cK6rHSGVrRAKps&usp=drive_fs" target="_blank">
                               <img src="./img/gdrive-folder-icon.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Drive Folder Label">
@@ -156,14 +156,14 @@
                      <!-- End Go Fest 2023 -->
                      <!-- Start Froakie CDay -->
                      <div class="asset-section" data-type="community-day">
-                        <h5><a class="page-anchor" id="froakieaugust2023" href="#froakieaugust2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Squirtle Community Day Classic (June 9th 2023)</span></h5>
+                        <h5><a class="page-anchor" id="froakieaugust2023" href="#froakieaugust2023">Meetup Event:</a> <span style="font-family:'texgyreadventorregular';">Froakie Community Day (August 13th 2023)</span></h5>
                         <p>
                            Pokémon GO is celebrating the Bubble Frog Pokémon, Froakie, with a special Community Day event on August 13, 2023 you'll be able to catch more Froakie in the wild, and maybe even find a shiny one! If you are looking for some cool art assets to use for your local meetup, we have got you covered. You can download and use them to decorate your venue, create invitations, make badges, or anything else you can imagine. We would love to see your creations, so please share them with us on social media being sure to tag us!
                         </p>
                         <div class="assetGroup">
                            <div class="asset">
-                              <a href="assets/2023/2023-08-13-community-day/HexBadge.png" target="_blank">
-                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-07-30-community-day/HexBadge.png">
+                              <a href="https://drive.google.com/open?id=1CElqmoft0ybL4K_KWlbpoAXyuuo87Opz&usp=drive_fs" target="_blank">
+                              <img alt="Hexagon Style Community Day Badge" src="./assets/2023/2023-08-13-community-day/HexBadge.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
@@ -180,7 +180,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://drive.google.com/open?id=1WVnO-Z-107K-pTWDbyElU1jmrK4u5tpt&usp=drive_fs" target="_blank">
-                              <img alt="Shild Style Community Day League Badge" src="./assets/2023/2023-08-13-community-day/CDL-Stack.png">
+                              <img alt="Shield Style Community Day League Badge" src="./assets/2023/2023-08-13-community-day/CDL-Stack.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
@@ -190,6 +190,37 @@
                                  The linked folder has multiple versions. The Gold ones are aimed at your winning players in Weight/Team/Catches Divisions, the standard blue ones are for players who have entered CDL.  
                                  <div class="credits">
                                     Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/546264-pokemon-go-community-day-73-coin-froakie">
+                              <img alt="Froakie C-Day Coin Photo by 808Asher" src="./assets/2023/2023-08-13-community-day/808Asher_CoinThumbnail.webp">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Community Day 73 Coin</label>
+                              </a>
+                              <p>
+                                 3D Print Coins for your community! 
+                                 <div class="credits">
+                                    Coin Design: <a href="https://www.printables.com/@808Asher" target="_blank">808Asher</a>
+                                 </div>
+                              </p>
+                           </div>
+                           
+                           <div class="asset">
+                              <a href="https://www.printables.com/model/546356-froakie-community-day-coin-august-2023">
+                              <img alt="Froakie C-Day Coin Photo by Forte" src="./assets/2023/2023-08-13-community-day/forte-coin-Head.jpg">
+                              <div class="asset-label">
+                                 <img src="https://printables.com/favicon.ico" alt="Printables Link Label">
+                              </div>
+                              <label>Froakie Community Day Coin</label>
+                              </a>
+                              <p>
+                                 3D Print Coins for your community! 
+                                 <div class="credits">
+                                    Coin Design: <a href="https://www.printables.com/@Forte_441255" target="_blank">Forte</a>
                                  </div>
                               </p>
                            </div>
